#INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")

INCLUDE("${PROJECT_SOURCE_DIR}/src/modules/snowpack/plugins/CMakeLists.txt")
INCLUDE("${PROJECT_SOURCE_DIR}/src/modules/snowpack/snowpackCore/CMakeLists.txt")

#FIND_PACKAGE(MeteoIO)
#INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} ${METEOIO_INCLUDE_DIR})
#LINK_DIRECTORIES(${METEOIO_LIBRARIES}) #this, so that if the users types in paths, it works

SET(snowpacklib_sources
	DataClasses.cc
	SnowpackConfig.cc
	Meteo.cc
	Saltation.cc
	Laws_sn.cc
	Utils.cc
	Stability.cc
	Hazard.cc
	SnowDrift.cc
	${plugins_sources}
	${core_sources}
)

##set names for static and dynamic library
#IF(BUILD_STATIC_LIBS)
#	SET(STATICNAME ${PROJECT_NAME}_STATIC)
#	SET(STATICLIBNAME ${PROJECT_NAME})
#	ADD_LIBRARY(${STATICNAME} STATIC ${snowpacklib_sources})
#	TARGET_LINK_LIBRARIES(${STATICNAME} ${METEOIO_LIBRARIES})
#ENDIF(BUILD_STATIC_LIBS)
#
#IF(BUILD_SHARED_LIBS)
#	SET(SHAREDNAME ${PROJECT_NAME})
#	ADD_LIBRARY(${SHAREDNAME} SHARED ${snowpacklib_sources})
#	TARGET_LINK_LIBRARIES(${SHAREDNAME} ${METEOIO_LIBRARIES})
#ENDIF(BUILD_SHARED_LIBS)
#
##set compiling targets
#IF(BUILD_SHARED_LIBS)
#IF(WIN32)
#	SET(LIB_DEST "bin") #since for Windows, dlls have to be alongside the exe
#ELSE(WIN32)
#	SET(LIB_DEST "lib")
#ENDIF(WIN32)
#	SET_TARGET_PROPERTIES(${SHAREDNAME} PROPERTIES
#		MACOSX_RPATH "${CMAKE_INSTALL_RPATH}"
#		PREFIX "${LIBPREFIX}"
#		LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/${LIB_DEST}"
#		ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/${LIB_DEST}"
#		RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/${LIB_DEST}"
#		CLEAN_DIRECT_OUTPUT 1
#		VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}"
#		SOVERSION "${VERSION_MAJOR}"
#	)
#
#	INSTALL(TARGETS ${SHAREDNAME}
#		RUNTIME DESTINATION "${LIB_DEST}" COMPONENT exe
#		LIBRARY DESTINATION "${LIB_DEST}" COMPONENT exe
#		ARCHIVE DESTINATION "${LIB_DEST}" COMPONENT exe
#	)
#ENDIF(BUILD_SHARED_LIBS)
#
#IF(BUILD_STATIC_LIBS)
#	SET_TARGET_PROPERTIES(${STATICNAME} PROPERTIES
#		MACOSX_RPATH "${CMAKE_INSTALL_RPATH}"
#		PREFIX "${LIBPREFIX}"
#		LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib"
#		ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib"
#		RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib"
#		CLEAN_DIRECT_OUTPUT 1
#		OUTPUT_NAME ${STATICLIBNAME}
#	)
#	INSTALL(TARGETS ${STATICNAME}
#		RUNTIME DESTINATION bin COMPONENT libraries
#		LIBRARY DESTINATION lib COMPONENT libraries
#		ARCHIVE DESTINATION lib COMPONENT libraries
#	)
#ENDIF(BUILD_STATIC_LIBS)
